--- a/contri/streamingpro-automl/pom.xml
+++ b/contri/streamingpro-automl/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>streamingpro</artifactId>
         <groupId>streaming.king</groupId>
-        <version>1.1.6</version>
+        <version>1.1.7-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
