--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>streamingpro</artifactId>
-        <groupId>streaming.king</groupId>
+        <groupId>tech.mlsql</groupId>
         <version>1.1.7-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -161,7 +161,7 @@
             <id>dsl</id>
             <dependencies>
                 <dependency>
-                    <groupId>streaming.king</groupId>
+                    <groupId>tech.mlsql</groupId>
                     <artifactId>streamingpro-dsl</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
@@ -172,7 +172,7 @@
             <id>dsl-legacy</id>
             <dependencies>
                 <dependency>
-                    <groupId>streaming.king</groupId>
+                    <groupId>tech.mlsql</groupId>
                     <artifactId>streamingpro-dsl-legacy</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
@@ -184,7 +184,7 @@
             <id>crawler</id>
             <dependencies>
                 <dependency>
-                    <groupId>streaming.king</groupId>
+                    <groupId>tech.mlsql</groupId>
                     <artifactId>streamingpro-crawler</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
@@ -195,7 +195,7 @@
             <id>xgboost</id>
             <dependencies>
                 <dependency>
-                    <groupId>streaming.king</groupId>
+                    <groupId>tech.mlsql</groupId>
                     <artifactId>streamingpro-xgboost</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
@@ -206,7 +206,7 @@
             <id>automl</id>
             <dependencies>
                 <dependency>
-                    <groupId>streaming.king</groupId>
+                    <groupId>tech.mlsql</groupId>
                     <artifactId>streamingpro-automl</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
@@ -248,7 +248,7 @@
             <id>streamingpro-spark-2.2.0-adaptor</id>
             <dependencies>
                 <dependency>
-                    <groupId>streaming.king</groupId>
+                    <groupId>tech.mlsql</groupId>
                     <artifactId>streamingpro-spark-2.2.0-adaptor</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
@@ -280,7 +280,7 @@
             <id>streamingpro-spark-2.3.0-adaptor</id>
             <dependencies>
                 <dependency>
-                    <groupId>streaming.king</groupId>
+                    <groupId>tech.mlsql</groupId>
                     <artifactId>streamingpro-spark-2.3.0-adaptor</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
@@ -311,7 +311,7 @@
             <id>streamingpro-spark-2.4.0-adaptor</id>
             <dependencies>
                 <dependency>
-                    <groupId>streaming.king</groupId>
+                    <groupId>tech.mlsql</groupId>
                     <artifactId>streamingpro-spark-2.4.0-adaptor</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
@@ -342,7 +342,7 @@
             <id>dl4j</id>
             <dependencies>
                 <dependency>
-                    <groupId>streaming.king</groupId>
+                    <groupId>tech.mlsql</groupId>
                     <artifactId>streamingpro-dl4j</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
@@ -353,7 +353,7 @@
             <id>opencv-support</id>
             <dependencies>
                 <dependency>
-                    <groupId>streaming.king</groupId>
+                    <groupId>tech.mlsql</groupId>
                     <artifactId>streamingpro-opencv</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
@@ -385,12 +385,12 @@
             </properties>
             <dependencies>
                 <dependency>
-                    <groupId>streaming.king</groupId>
+                    <groupId>tech.mlsql</groupId>
                     <artifactId>streamingpro-spark-common</artifactId>
                     <version>${project.parent.version}</version>
                     <exclusions>
                         <exclusion>
-                            <groupId>streaming.king</groupId>
+                            <groupId>tech.mlsql</groupId>
                             <artifactId>streamingpro-dependency</artifactId>
                         </exclusion>
                     </exclusions>
@@ -414,7 +414,7 @@
                 <!--<version>5.5.2</version>-->
                 <!--</dependency>-->
                 <dependency>
-                    <groupId>streaming.king</groupId>
+                    <groupId>tech.mlsql</groupId>
                     <artifactId>streamingpro-spark-common</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
@@ -424,13 +424,13 @@
     <dependencies>
 
         <dependency>
-            <groupId>streaming.king</groupId>
+            <groupId>tech.mlsql</groupId>
             <artifactId>streamingpro-spark-common</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>streaming.king</groupId>
+            <groupId>tech.mlsql</groupId>
             <artifactId>streamingpro-api</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
