--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -215,6 +215,7 @@
 
         <profile>
             <id>unit-test</id>
+
             <dependencies>
                 <dependency>
                     <groupId>org.elasticsearch</groupId>
@@ -225,6 +226,16 @@
                     <groupId>org.mongodb.spark</groupId>
                     <artifactId>mongo-spark-connector_2.11</artifactId>
                     <version>2.2.5</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.hbase</groupId>
+                    <artifactId>hbase-client</artifactId>
+                    <version>1.2.0</version>
+                </dependency>
+                <dependency>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>streamingpro-hbase</artifactId>
+                    <version>${project.parent.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.hive</groupId>
