--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -262,6 +262,45 @@
                         
                     </exclusions>
                 </dependency>
+                <dependency>
+                    <groupId>com.lucidworks.spark</groupId>
+                    <artifactId>spark-solr</artifactId>
+                    <version>3.6.0</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.apache.logging.log4j</groupId>
+                            <artifactId>log4j-slf4j-impl</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.slf4j</groupId>
+                            <artifactId>slf4j-log4j12</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <artifactId>*</artifactId>
+                            <groupId>javax.servlet</groupId>
+                        </exclusion>
+                        <exclusion>
+                            <artifactId>*</artifactId>
+                            <groupId>org.apache.hadoop</groupId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>com.fasterxml.jackson.core</groupId>
+                            <artifactId>jackson-core</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>com.fasterxml.jackson.core</groupId>
+                            <artifactId>jackson-databind</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>com.fasterxml.jackson.module</groupId>
+                            <artifactId>jackson-module-scala_${scala.binary.version}</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>com.esotericsoftware</groupId>
+                            <artifactId>kryo-shaded</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
             </dependencies>
         </profile>
 
