--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,6 @@ mlsql.master
 
 dev/docker/*.jar
 dev/docker/*.sh
+streamingpro-cluster/dev/mlsql-cluster-docker/*.jar
+streamingpro-cluster/dev/mlsql-cluster-docker/*.sh
+streamingpro-cluster/dev/mlsql-cluster-docker/*.yml
