--- a/contri/streamingpro-xgboost/pom.xml
+++ b/contri/streamingpro-xgboost/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>streamingpro</artifactId>
         <groupId>tech.mlsql</groupId>
-        <version>1.1.7-SNAPSHOT</version>
+        <version>1.1.7.1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
