--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,7 @@ project/plugins/project/
 
 /jni
 /streamingpro-spark-2.0/src/main/resources-local/python/python_temp.pickle
+/streamingpro-mlsql/src/main/resources-local/core-site.xml
 streamingpro-crawler/tasks/
 streamingpro-commons/logs
 streamingpro-dsl/logs/
