--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -245,6 +245,14 @@
                             <groupId>org.mortbay.jetty</groupId>
                             <artifactId>servlet-api-2.5</artifactId>
                         </exclusion>
+                        <exclusion>
+                            <groupId>org.apache.hadoop</groupId>
+                            <artifactId>hadoop-hdfs-client</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.apache.hadoop</groupId>
+                            <artifactId>hadoop-auth</artifactId>
+                        </exclusion>
                     </exclusions>
                 </dependency>
                 <dependency>
@@ -305,6 +313,10 @@
                         <exclusion>
                             <groupId>org.apache.logging.log4j</groupId>
                             <artifactId>log4j-slf4j-impl</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.apache.hadoop</groupId>
+                            <artifactId>hadoop-hdfs</artifactId>
                         </exclusion>
 
                     </exclusions>
@@ -504,6 +516,7 @@
                 </dependency>
             </dependencies>
         </profile>
+        
 
         <profile>
             <id>local</id>
@@ -580,6 +593,12 @@
             <artifactId>spark-core_${scala.binary.version}</artifactId>
             <version>${spark.version}</version>
             <scope>${scope}</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-client</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -607,6 +626,7 @@
             </exclusions>
         </dependency>
 
+
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql-kafka-0-10_${scala.binary.version}</artifactId>
@@ -622,7 +642,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
-            <version>2.6.5</version>
+            <version>${hadoop-client-version}</version>
             <scope>${scope}</scope>
             <exclusions>
                 <exclusion>
